--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,15 +33,32 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
+
     compile 'com.github.zzz40500:AndroidSweetSheet:1.1.0'
+
     compile 'com.android.support:design:23.1.1'
+
     compile 'com.facebook.fresco:fresco:0.9.0'
+
     compile 'com.android.support:support-v4:23.1.1'
+
     compile 'com.novaapps:FloatingActionMenu:1.0'
+
     compile project(':disklrucache-2.0.2')
     compile project(':universal-image-loader-1.9.5')
+
     compile 'com.android.support:cardview-v7:24.0.0-alpha2'
+
     compile project(':core-3.2.2-SNAPSHOT')
     compile project(':zxing-android-core-3.2.1')
+
+    compile 'cn.bingoogolapple:bga-qrcodecore:1.1.3@aar'
+    compile 'cn.bingoogolapple:bga-zxing:1.1.3@aar'
+
+    compile 'com.android.support:recyclerview-v7:24.0.0'
+    compile 'cn.bingoogolapple:bga-adapter:1.1.0@aar'
+    compile 'cn.bingoogolapple:bga-photopicker:1.1.2@aar'
+
+
     compile 'com.quinny898.library.persistentsearch:library:1.1.0-SNAPSHOT'
 }
