--- a/fresco/build.gradle
+++ b/fresco/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${ANDROID_GRADLE_PLUGIN_VERSION}"
+        classpath 'com.android.tools.build:gradle:2.2.2'
         classpath "de.undercouch:gradle-download-task:${GRADLE_DOWNLOAD_TASK_VERSION}"
 
         // NOTE: Do not place your application dependencies here; they belong
