--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,11 +46,13 @@ dependencies {
     compile 'cn.bingoogolapple:bga-zxing:1.1.3@aar'
     compile 'cn.bingoogolapple:bga-adapter:1.1.0@aar'
     compile 'cn.bingoogolapple:bga-photopicker:1.1.2@aar'
+//    compile 'com.tomergoldst.android:tooltips:1.0.6'
+    compile 'cn.bingoogolapple:bga-banner:2.1.7@aar'
     compile 'com.quinny898.library.persistentsearch:library:1.1.0-SNAPSHOT'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.jcodecraeer:xrecyclerview:1.2.7'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:support-v4:24.2.1'
-    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:appcompat-v7:23.0.2'
+    compile 'com.android.support:support-v4:23.0.2'
+    compile 'com.android.support:design:23.0.2'
 }
